Changed match timing in matches.csv and alignment issue of past tournament

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -177,7 +177,6 @@ padding: 5px;
 }
 
 #upcoming-left-pull-left {
-  clear: both; 
   margin-top: 25px; 
   padding-right: 25px; 
   border-right: 1px solid #000;
